# emulated-light-client

./: .gitignore  .mocharc.cjs  .rustfmt.toml  .style.yapf  Anchor.toml  Cargo.toml  LICENSE  README.md  bridge-escrow-test.sh  chain.json  common.py  concat.py  deny.toml  fees.py  fetch-signatures.py  fetch-transactions.py  fetch-transactions.sh  get-signatures.sh  local.json  meta.json  mint_authority.json  package.json  post.md  private.json  process-raw.py  program_data.json  rollup.md  solana-test.sh  test.json  test.sh  test_keypair.json  trie.json  tsconfig.json  validators.py
blockchain/: Cargo.toml
common/blockchain/: Cargo.toml  build.rs
common/blockchain/proto/: guest.proto
common/blockchain/src/: block.rs  candidates.rs  config.rs  epoch.rs  height.rs  ibc_state.rs  lib.rs  manager.rs  proto.rs  validators.rs
common/blockchain/src/candidates/: tests.rs
common/blockchain/src/ibc_state/: consensus.rs  proof.rs
common/blockchain/src/snapshots/: blockchain__block__block-header.snap  blockchain__block__genesis-block.snap
common/cf-guest/: Cargo.toml
common/cf-guest/proto/: guest.proto
common/cf-guest/src/: client.rs  client_impls.rs  consensus.rs  header.rs  lib.rs  message.rs  misbehaviour.rs  proof.rs  proto.rs
common/cf-guest/src/client/: impls.rs  tests.rs
common/cf-guest/src/snapshots/: cf_guest__proto__client_message.snap  cf_guest__proto__client_state.snap
common/cf-solana/: Cargo.toml  build.rs
common/cf-solana/proto/: solana.proto
common/cf-solana/src/: blake3.rs  client.rs  consensus.rs  header.rs  lib.rs  message.rs  misbehaviour.rs  proof.rs  proto.rs  serde_impl.rs  types.rs  utils.rs
common/cf-solana/src/client/: impls.rs
common/cf-solana/src/proof/: conv.rs  features.rs  tests.rs
common/cf-solana/src/snapshots/: cf_solana__proto__client_message.snap  cf_solana__proto__client_state.snap  cf_solana__proto__consensus_state.snap  cf_solana__proto__header.snap  cf_solana__proto__misbehaviour.snap
common/lib/: Cargo.toml
common/lib/src/: hash.rs  lib.rs  par.rs  test_utils.rs  u3.rs  varint.rs
common/proto-utils/: Cargo.toml
common/proto-utils/src/: lib.rs  tests.rs
common/proto-utils/src/snapshots/: proto_utils__tests__message.snap
common/sealable-trie/: Cargo.toml
common/sealable-trie/src/: bits.rs  lib.rs  nodes.rs  proof.rs  trie.rs
common/sealable-trie/src/bits/: concat.rs  ext_key.rs
common/sealable-trie/src/nodes/: stress_tests.rs  tests.rs
common/sealable-trie/src/proof/: serialisation.rs
common/sealable-trie/src/trie/: del.rs  iter.rs  seal.rs  set.rs  tests.rs
common/trie-geyser/: Cargo.toml
common/trie-geyser/src/: api.rs
common/trie-geyser/src/snapshots/: witnessed_trie_geyser__api__slot_data_serialisation.snap
common/trie-ids/: Cargo.toml
common/trie-ids/src/: ids.rs  lib.rs  path.rs  path_info.rs  trie_key.rs
common/wasm/: Cargo.toml  build.rs
common/wasm/proto/: wasm.proto
common/wasm/src/: client_state.rs  consensus_state.rs  lib.rs  proto.rs
common/wasm/src/snapshots/: wasm__proto__consensus_state.snap
ed25519-client/: Cargo.toml
ed25519-client/src/: args.rs  main.rs
ed25519-program/: Cargo.toml
ed25519-program/src/: ed25519_program.rs  lib.rs  program.rs  stdx.rs
hash-client/: Cargo.toml
hash-client/src/: args.rs  main.rs
hash-program/: Cargo.toml
hash-program/src/: lib.rs
solana/bridge-escrow/programs/bridge-escrow/: Cargo.toml
solana/bridge-escrow/programs/bridge-escrow/src/: bridge.rs  events.rs  lib.rs  tests.rs
solana/ed25519/: Cargo.toml
solana/ed25519/src/: lib.rs
solana/restaking-v2/programs/restaking-v2/: Cargo.toml
solana/restaking-v2/programs/restaking-v2/src/: lib.rs  tests.rs
solana/restaking/programs/restaking/: Cargo.toml
solana/restaking/programs/restaking/src/: constants.rs  lib.rs  token.rs  validation.rs
solana/signature-verifier/: Cargo.toml
solana/signature-verifier/src/: api.rs  ed25519.rs  ed25519_program.rs  lib.rs  program.rs  verifier.rs
solana/signature-verifier/src/snapshots/: sigverify__ed25519_program__test__single_signature__new_instruction_snapshot.snap  sigverify__ed25519_program__test__two_signatures__new_instruction_snapshot.snap  sigverify__ed25519_program__test__two_signatures_prefix_message__new_instruction_snapshot.snap  sigverify__ed25519_program__test__two_signatures_same_message__new_instruction_snapshot.snap
solana/solana-ibc/programs/solana-ibc/: Cargo.toml
solana/solana-ibc/programs/solana-ibc/src/: allocator.rs  chain.rs  client_state.rs  consensus_state.rs  ed25519.rs  error.rs  events.rs  execution_context.rs  host.rs  ibc.rs  ix_data_account.rs  lib.rs  mocks.rs  module_holder.rs  no-mocks.rs  scrow.rs  storage.rs  tests.rs  trie.rs  trie_key.rs  validation_context.rs
solana/solana-ibc/programs/solana-ibc/src/client_state/: impls.rs
solana/solana-ibc/programs/solana-ibc/src/snapshots/: solana_ibc__events__snapshot_tests__borsh_block_finalised.snap  solana_ibc__events__snapshot_tests__borsh_block_signed.snap  solana_ibc__events__snapshot_tests__borsh_ibc_event.snap  solana_ibc__events__snapshot_tests__borsh_initialised.snap  solana_ibc__events__snapshot_tests__borsh_new_block.snap  solana_ibc__events__snapshot_tests__borsh_new_block_with_epoch.snap
solana/solana-ibc/programs/solana-ibc/src/storage/: ids.rs  map.rs  trie_key.rs
solana/trie/: Cargo.toml
solana/trie-example/: Cargo.toml  build.sh
solana/trie-example/client/: main.ts  trie.ts  utils.ts
solana/trie-example/src/: lib.rs  trie.rs
solana/trie-geyser/: Cargo.toml  README.md  config.json
solana/trie-geyser/src/: config.rs  lib.rs  plugin.rs  utils.rs  worker.rs
solana/trie/src/: account.rs  alloc.rs  data_ref.rs  header.rs  lib.rs  trie.rs  witness.rs
solana/witnessed-trie/: Cargo.toml  wip.rs
solana/witnessed-trie-cli/: Cargo.toml
solana/witnessed-trie-cli/src/: args.rs  main.rs
solana/witnessed-trie/src/: accounts.rs  api.rs  contract.rs  lib.rs  utils.rs
validator/: Cargo.toml  README.md  config.toml  example.config.toml
validator/src/: command.rs  main.rs  stake.rs  utils.rs  validator.rs
(+111 files in other folders)
