[workspace.package]
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "ed25519-*",
    "hash-*",
]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1.14", default-features = false }
derive_more = { version = "1.0.0", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false }
hex = { git = "https://github.com/mina86/rust-hex.git", branch = "main", default-features = false }
rand = { version = "0.7", default-features = false }
# TODO(mina86): Change to "1" once we update the toolchain.  Building
# with serde 1.0.204 breaks due to the use of ‘diagnostic’ attribute.
serde = { version = "=1.0.203", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
solana-cli-config = { version = "2.0.13", default-features = false }
solana-client = { version = "2.0.13", default-features = false }
solana-program = { version = "2.0.13", default-features = false }
solana-sdk = { version = "2.0.13", default-features = false }
solana-transaction-status = { version = "2.0.13", default-features = false }

[patch.crates-io]
# curve25519-dalek 3.x pin zeroize to <1.4 which conflicts with other
# dependencies requiring zeroize ^1.5.  We’re patching it to unpin
# zeroize.
#
# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
