[package]
name = "validator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang.workspace = true
anchor-client.workspace = true
base64.workspace = true
borsh.workspace = true
solana-ibc.workspace = true
