[package]
name = "validator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang.workspace = true
anchor-client.workspace = true
anchor-spl.workspace = true
base64.workspace = true
guestchain.workspace = true
borsh.workspace = true
bytemuck.workspace = true
clap.workspace = true
derive_more.workspace = true
directories.workspace = true
dialoguer.workspace = true
env_logger.workspace = true
lib.workspace = true
log.workspace = true
solana-ibc.workspace = true
restaking.workspace = true
solana-ed25519.workspace = true
serde.workspace = true
serde_bytes.workspace = true
toml.workspace = true

