[package]
name = "validator"
version = "0.0.4"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true
base64.workspace = true
borsh.workspace = true
clap.workspace = true
derive_more.workspace = true
dialoguer.workspace = true
directories.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_bytes.workspace = true
toml.workspace = true

guestchain.workspace = true
lib.workspace = true
restaking.workspace = true
solana-signature-verifier = { workspace = true, features = ["library"] }
solana-ibc.workspace = true
