[package]
name = "blockchain"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
borsh.workspace = true
derive_more.workspace = true

lib = { workspace = true, features = ["borsh"] }

[dev-dependencies]
lib = { workspace = true, features = ["test_utils"] }
rand.workspace = true
stdx.workspace = true

[features]
std = []
