[package]
name = "blockchain"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
borsh.workspace = true
bytemuck.workspace = true
derive_more.workspace = true
ibc-core-commitment-types.workspace = true
ibc-proto.workspace = true
prost = { workspace = true, features = ["prost-derive"] }
strum.workspace = true

lib = { workspace = true, features = ["borsh"] }
stdx.workspace = true

[build-dependencies]
prost-build.workspace = true

# home 0.5.9 requires rustc 1.70 and `anchor build` uses 0.68 so we’re
# pinning to earlier version.  Note that we’re not actually using the
# crate ourselves.  It comes in through prost-build package.
home = "=0.5.5"

[dev-dependencies]
lib = { workspace = true, features = ["test_utils"] }
rand.workspace = true

[features]
std = []
