[package]
name = "blockchain"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
borsh.workspace = true
bytemuck.workspace = true
derive_more.workspace = true
ibc-core-client-context.workspace = true
ibc-core-commitment-types.workspace = true
ibc-primitives.workspace = true
prost = { workspace = true, features = ["prost-derive"] }
strum.workspace = true

lib = { workspace = true, features = ["borsh"] }
stdx.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
insta.workspace = true
lib = { workspace = true, features = ["test_utils"] }
rand.workspace = true

[features]
std = []
