[package]
name = "lib"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
base64.workspace = true
borsh = { workspace = true, optional = true }
derive_more.workspace = true

stdx.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2.workspace = true

[target.'cfg(target_os = "solana")'.dependencies]
solana-program.workspace = true

[dev-dependencies]
rand.workspace = true

[features]
test_utils = []
