[package]
name = "lib"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
base64.workspace = true
bs58 = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive"] }
derive_more.workspace = true
sha2.workspace = true
solana-program = { workspace = true, optional = true }

stdx.workspace = true

[dev-dependencies]
rand.workspace = true

[features]
test_utils = []
