[package]
name = "proto-utils"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
const_format.workspace = true
derive_more.workspace = true
ibc-core-client-context = { workspace = true, optional = true }
ibc-proto.workspace = true
prost.workspace = true

[dev-dependencies]
insta.workspace = true
prost = { workspace = true, features = ["prost-derive"] }

[features]
ibc = ["dep:ibc-core-client-context"]
