[package]
name = "sealable-trie"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
base64.workspace = true
borsh = { workspace = true, optional = true }
derive_more.workspace = true
sha2.workspace = true
strum.workspace = true

lib.workspace = true
memory.workspace = true
stdx.workspace = true

[dev-dependencies]
hex-literal.workspace = true
pretty_assertions.workspace = true
rand.workspace = true

lib = { workspace = true, features = ["test_utils"] }
memory = { workspace = true, features = ["test_utils"] }
