[package]
name = "wasm"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
derive_more.workspace = true
ibc-primitives.workspace = true
ibc-core-commitment-types.workspace = true
ibc-core-client-context.workspace = true
ibc-proto.workspace = true
prost = { workspace = true, features = ["prost-derive"] }

lib = { workspace = true, features = ["borsh"] }

[dev-dependencies]
insta.workspace = true
rand.workspace = true

lib = { workspace = true, features = ["test_utils"] }

[features]
std = []
