[package]
name = "solana-ed25519"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
bs58.workspace = true
base64.workspace = true
borsh = { workspace = true, optional = true }
bytemuck.workspace = true
derive_more.workspace = true
solana-program.workspace = true

guestchain = { workspace = true, optional = true }
lib = { workspace = true, features = ["solana-program"] }
solana-signature-verifier = { workspace = true, features = ["library"] }

[features]
default = ["borsh", "guest"]
guest = ["dep:guestchain"]
