[package]
name = "solana-signature-verifier"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[lib]
name = "sigverify"
crate-type = ["cdylib", "lib"]

[features]
library = []

[dependencies]
bytemuck.workspace = true
derive_more.workspace = true
solana-program.workspace = true

lib.workspace = true
stdx.workspace = true
