[package]
name = "solana-signature-verifier"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
edition = "2021"
version.workspace = true

[lib]
name = "sigverify"
crate-type = ["cdylib", "lib"]

[features]
default = ["borsh", "guest"]
guest = ["guestchain"]
library = []

[dependencies]
base64.workspace = true
borsh = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["must_cast"] }
derive_more.workspace = true
solana-program.workspace = true

guestchain = { workspace = true, optional = true }
lib = { workspace = true, features = ["bs58"] }
stdx.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
insta.workspace = true
solana-sdk.workspace = true
