[package]
name = "solana-trie-example"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[lib]
name = "trie"
crate-type = ["cdylib", "lib"]

[dependencies]
derive_more.workspace = true
solana-program.workspace = true

lib.workspace = true
memory.workspace = true
sealable-trie.workspace = true
stdx.workspace = true
