[package]
name = "solana-trie-example"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
edition = "2021"
version.workspace = true

[lib]
name = "trie"
crate-type = ["cdylib", "lib"]

[dependencies]
derive_more.workspace = true
solana-program.workspace = true

lib.workspace = true
memory.workspace = true
sealable-trie.workspace = true
solana-trie.workspace = true
stdx.workspace = true
